Fix bug with spacing in minimized state on mobile

--- a/src/components/EncounterDisplay/EncounterDisplay.module.scss
+++ b/src/components/EncounterDisplay/EncounterDisplay.module.scss
@@ -166,7 +166,7 @@
     }
 
     .minimized {
-        left: 0;
+        left: constants.$page-padding;
         width: var(--sprite-size);
     }
 }
